--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                   <input type="password" class="form-control" id="exampleInputPassword1">
                 </div>
                 <button type="submit" class="btn btn-primary">Acessar</button>
-                <a class="btn btn2 btn-primary" href="#" role="button">Cadastrar</a>
+                <a class="btn btn2 btn-primary" href="cadastro.html" role="button">Cadastrar</a>
               </form>
           </div>
           <div class="col">
